--- a/faqs.html
+++ b/faqs.html
@@ -8,7 +8,7 @@
   </title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="Emergency Plumber in Forney, TX" id="meta_emergency_title" name="keywords"/>
-<meta content="Looking for a reliable plumber in Forney, TX? Our expert team offers top-notch plumbing services, from emergency repairs to routine maintenance. Licensed, insured, and committed to outstanding customer satisfaction. Contact us for prompt and professional service today!" id="meta_description" name="description"/>
+<meta content="Reliable plumber services in Forney, TX offering expert repairs, installations, and maintenance. Trustworthy emergency support, licensed professionals, and customer satisfaction guaranteed. Contact us for plumbing solutions that keep your home running smoothly." id="meta_description" name="description"/>
 <!-- Favicon -->
 <link href="img/favicon.ico" rel="icon"/>
 <!-- Google Web Fonts -->
@@ -263,13 +263,13 @@
 <a class="nav-link dropdown-toggle" data-bs-toggle="" href="https://forneytxplumber.com/service-areas">
         Service Areas
        </a>
-<div class="dropdown-menu fade-up m-0" id="serviceArea_dropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/clements-ranch">Clements Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-parks">Gateway Parks</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/grayhawk">Grayhawk</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/park-trails">Park Trails</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overland-grove">Overland Grove</a></div>
+<div class="dropdown-menu fade-up m-0" id="serviceArea_dropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/heartland">Heartland</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/mustang-creek">Mustang Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-estates">Gateway Estates</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overlook-hill">Overlook Hill</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/buffalo-creek">Buffalo Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a></div>
 </div>
 <div class="d-block d-lg-none" id="mobileServiceAreaMenu">
 <a class="nav-item nav-link dropdown-toggle" data-bs-target="#mobileServiceAreaDropdown" data-bs-toggle="collapse" href="#">
         Service Areas
        </a>
-<div class="collapse" id="mobileServiceAreaDropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/clements-ranch">Clements Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-parks">Gateway Parks</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/grayhawk">Grayhawk</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/park-trails">Park Trails</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overland-grove">Overland Grove</a></div>
+<div class="collapse" id="mobileServiceAreaDropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/heartland">Heartland</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/mustang-creek">Mustang Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-estates">Gateway Estates</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overlook-hill">Overlook Hill</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/buffalo-creek">Buffalo Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a></div>
 </div>
 <a class="nav-item nav-link" href="https://forneytxplumber.com/testimonial">
        Testimonial
@@ -339,19 +339,19 @@
 </h2>
 <div aria-labelledby="headingFAQ1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion" id="collapseFAQ1">
 <div class="accordion-body">
-        We offer a wide range of plumbing services including leak detection, pipe repair, water heater installation and repair, drain cleaning, and emergency plumbing services.
+        We offer a wide range of plumbing services including leak repairs, drain cleaning, water heater installation, pipe replacements, and emergency plumbing services.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ2">
 <button aria-controls="collapseFAQ2" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ2" data-bs-toggle="collapse" type="button">
-        Are you available for emergency plumbing services in Forney, TX?
+        Do you provide emergency plumbing services in Forney?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ2">
 <div class="accordion-body">
-        Yes, we offer 24/7 emergency plumbing services to address any urgent plumbing issues you may encounter.
+        Yes, we provide 24/7 emergency plumbing services to address urgent issues like burst pipes, severe leaks, and clogged drains.
        </div>
 </div>
 </div>
@@ -363,91 +363,91 @@
 </h2>
 <div aria-labelledby="headingFAQ3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ3">
 <div class="accordion-body">
-        You can schedule an appointment by calling us directly or filling out the contact form on our website. We will get back to you promptly to confirm your booking.
+        You can schedule an appointment by calling our office directly or by visiting our website and filling out the online appointment request form.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ4">
 <button aria-controls="collapseFAQ4" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ4" data-bs-toggle="collapse" type="button">
-        Do you offer free plumbing estimates in Forney, TX?
+        Are your plumbers licensed and insured?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ4">
 <div class="accordion-body">
-        Yes, we provide free estimates for all of our plumbing services. Contact us to get a detailed quote.
+        Yes, all our plumbers are fully licensed and insured to ensure quality and reliable service.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ5">
 <button aria-controls="collapseFAQ5" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ5" data-bs-toggle="collapse" type="button">
-        What are your rates for common plumbing tasks?
+        What should I do if I have a plumbing leak?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ5">
 <div class="accordion-body">
-        Our rates vary depending on the service required. Please contact us for detailed pricing information tailored to your specific needs.
+        If you have a plumbing leak, close the main water valve immediately and contact us for emergency plumbing repair.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ6">
 <button aria-controls="collapseFAQ6" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ6" data-bs-toggle="collapse" type="button">
-        Are your plumbers licensed and insured?
+        Do you offer free estimates for plumbing repairs?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ6">
 <div class="accordion-body">
-        Yes, all of our plumbers are fully licensed and insured to ensure the highest quality service and peace of mind for our customers.
+        Yes, we offer free estimates for most plumbing repairs to help you understand the scope and cost of the service.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ7">
 <button aria-controls="collapseFAQ7" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ7" data-bs-toggle="collapse" type="button">
-        Can you help with sewer line issues?
+        Can you help with water heater installation and repair?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ7" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ7">
 <div class="accordion-body">
-        Absolutely. We offer inspection, repair, and replacement services for both residential and commercial sewer lines.
+        Absolutely, we specialize in the installation, repair, and maintenance of all types of water heaters including tankless systems.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ8">
 <button aria-controls="collapseFAQ8" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ8" data-bs-toggle="collapse" type="button">
-        What should I do in case of a burst pipe?
+        How often should I have my plumbing system inspected?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ8" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ8">
 <div class="accordion-body">
-        In case of a burst pipe, shut off the main water supply immediately and call us for emergency plumbing services. We will dispatch a technician to fix the issue promptly.
+        It's advisable to have your plumbing system inspected annually to catch potential problems early and maintain efficient operation.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ9">
 <button aria-controls="collapseFAQ9" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ9" data-bs-toggle="collapse" type="button">
-        Do you provide water heater repair and installation?
+        What areas do you serve besides Forney, TX?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ9" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ9">
 <div class="accordion-body">
-        Yes, we specialize in both repair and installation of water heaters, including tankless models. Our experienced technicians are here to help with all your water heater needs.
+        In addition to Forney, we serve several surrounding areas including Mesquite, Terrell, and Kaufman.
        </div>
 </div>
 </div>
 <div class="accordion-item">
 <h2 class="accordion-header" id="headingFAQ10">
 <button aria-controls="collapseFAQ10" aria-expanded="false" class="accordion-button" data-bs-target="#collapseFAQ10" data-bs-toggle="collapse" type="button">
-        What areas do you serve beyond Forney, TX?
+        Do you offer any warranties on your plumbing services?
        </button>
 </h2>
 <div aria-labelledby="headingFAQ10" class="accordion-collapse collapse" data-bs-parent="#faqAccordion" id="collapseFAQ10">
 <div class="accordion-body">
-        Besides Forney, we also serve surrounding areas including Terrell, Mesquite, Rockwall, and Sunnyvale. Please reach out to confirm service availability in your specific location.
+        Yes, we offer warranties on several of our plumbing services and products. Please contact us for specific warranty details.
        </div>
 </div>
 </div>
