--- a/service-areas.html
+++ b/service-areas.html
@@ -8,7 +8,7 @@
   </title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="Emergency Plumber in service-areas | (469) 898-0276" id="meta_emergency_title" name="keywords"/>
-<meta content="Looking for a reliable plumber in Forney, TX? Our expert team offers top-notch plumbing services, from emergency repairs to routine maintenance. Licensed, insured, and committed to outstanding customer satisfaction. Contact us for prompt and professional service today!" id="meta_description" name="description"/>
+<meta content="Reliable plumber services in Forney, TX offering expert repairs, installations, and maintenance. Trustworthy emergency support, licensed professionals, and customer satisfaction guaranteed. Contact us for plumbing solutions that keep your home running smoothly." id="meta_description" name="description"/>
 <!-- Favicon -->
 <link href="img/favicon.ico" rel="icon"/>
 <!-- Google Web Fonts -->
@@ -263,13 +263,13 @@
 <a class="nav-link dropdown-toggle" data-bs-toggle="" href="https://forneytxplumber.com/service-areas">
         Service Areas
        </a>
-<div class="dropdown-menu fade-up m-0" id="serviceArea_dropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/clements-ranch">Clements Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-parks">Gateway Parks</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/grayhawk">Grayhawk</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/park-trails">Park Trails</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overland-grove">Overland Grove</a></div>
+<div class="dropdown-menu fade-up m-0" id="serviceArea_dropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/heartland">Heartland</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/mustang-creek">Mustang Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-estates">Gateway Estates</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overlook-hill">Overlook Hill</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/buffalo-creek">Buffalo Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a></div>
 </div>
 <div class="d-block d-lg-none" id="mobileServiceAreaMenu">
 <a class="nav-item nav-link dropdown-toggle" data-bs-target="#mobileServiceAreaDropdown" data-bs-toggle="collapse" href="https://forneytxplumber.com/service-areas">
         Service Areas
        </a>
-<div class="collapse" id="mobileServiceAreaDropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/clements-ranch">Clements Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-parks">Gateway Parks</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/grayhawk">Grayhawk</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/park-trails">Park Trails</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overland-grove">Overland Grove</a></div>
+<div class="collapse" id="mobileServiceAreaDropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/heartland">Heartland</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/mustang-creek">Mustang Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-estates">Gateway Estates</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overlook-hill">Overlook Hill</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/buffalo-creek">Buffalo Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a></div>
 </div>
 <a class="nav-item nav-link" href="https://forneytxplumber.com/testimonial">
        Testimonial
@@ -333,9 +333,9 @@
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm border-light text-center">
 <div class="card-body">
-<a href="https://forneytxplumber.com/service-areas/clements-ranch">
+<a href="https://forneytxplumber.com/service-areas/heartland">
 <h5 class="card-title text-primary">
-         Clements Ranch
+         Heartland
         </h5>
 </a>
 </div>
@@ -344,9 +344,31 @@
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm border-light text-center">
 <div class="card-body">
-<a href="https://forneytxplumber.com/service-areas/gateway-parks">
+<a href="https://forneytxplumber.com/service-areas/mustang-creek">
 <h5 class="card-title text-primary">
-         Gateway Parks
+         Mustang Creek
+        </h5>
+</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="card shadow-sm border-light text-center">
+<div class="card-body">
+<a href="https://forneytxplumber.com/service-areas/gateway-estates">
+<h5 class="card-title text-primary">
+         Gateway Estates
+        </h5>
+</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="card shadow-sm border-light text-center">
+<div class="card-body">
+<a href="https://forneytxplumber.com/service-areas/overlook-hill">
+<h5 class="card-title text-primary">
+         Overlook Hill
         </h5>
 </a>
 </div>
@@ -399,9 +421,9 @@
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm border-light text-center">
 <div class="card-body">
-<a href="https://forneytxplumber.com/service-areas/grayhawk">
+<a href="https://forneytxplumber.com/service-areas/buffalo-creek">
 <h5 class="card-title text-primary">
-         Grayhawk
+         Buffalo Creek
         </h5>
 </a>
 </div>
@@ -413,28 +435,6 @@
 <a href="https://forneytxplumber.com/service-areas/windmill-farms">
 <h5 class="card-title text-primary">
          Windmill Farms
-        </h5>
-</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 mb-4">
-<div class="card shadow-sm border-light text-center">
-<div class="card-body">
-<a href="https://forneytxplumber.com/service-areas/park-trails">
-<h5 class="card-title text-primary">
-         Park Trails
-        </h5>
-</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 mb-4">
-<div class="card shadow-sm border-light text-center">
-<div class="card-body">
-<a href="https://forneytxplumber.com/service-areas/overland-grove">
-<h5 class="card-title text-primary">
-         Overland Grove
         </h5>
 </a>
 </div>
