--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <title id="about_page_title">About Us | Pro Plumber Forney</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="Emergency Plumber in Forney, TX | Pro Plumber Forney" id="about_meta_emergency_title" name="keywords"/>
-<meta content="Looking for a reliable plumber in Forney, TX? Our expert team offers top-notch plumbing services, from emergency repairs to routine maintenance. Licensed, insured, and committed to outstanding customer satisfaction. Contact us for prompt and professional service today!" id="about_meta_description" name="description"/>
+<meta content="Reliable plumber services in Forney, TX offering expert repairs, installations, and maintenance. Trustworthy emergency support, licensed professionals, and customer satisfaction guaranteed. Contact us for plumbing solutions that keep your home running smoothly." id="about_meta_description" name="description"/>
 <!-- Favicon -->
 <link href="img/favicon.ico" rel="icon"/>
 <!-- Google Web Fonts -->
@@ -229,11 +229,11 @@
 <!-- Service Area Dropdown -->
 <div class="nav-item dropdown" id="parentServiceAreaDropdown">
 <a class="nav-link dropdown-toggle" data-bs-toggle="" href="https://forneytxplumber.com/service-areas">Service Areas</a>
-<div class="dropdown-menu fade-up m-0" id="serviceArea_dropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/clements-ranch">Clements Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-parks">Gateway Parks</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/grayhawk">Grayhawk</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/park-trails">Park Trails</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overland-grove">Overland Grove</a></div>
+<div class="dropdown-menu fade-up m-0" id="serviceArea_dropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/heartland">Heartland</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/mustang-creek">Mustang Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-estates">Gateway Estates</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overlook-hill">Overlook Hill</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/buffalo-creek">Buffalo Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a></div>
 </div>
 <div class="d-block d-lg-none" id="mobileServiceAreaMenu">
 <a class="nav-item nav-link dropdown-toggle" data-bs-target="#mobileServiceAreaDropdown" data-bs-toggle="collapse" href="#">Service Areas</a>
-<div class="collapse" id="mobileServiceAreaDropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/clements-ranch">Clements Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-parks">Gateway Parks</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/grayhawk">Grayhawk</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/park-trails">Park Trails</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overland-grove">Overland Grove</a></div>
+<div class="collapse" id="mobileServiceAreaDropdown"><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/heartland">Heartland</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/mustang-creek">Mustang Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/gateway-estates">Gateway Estates</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/overlook-hill">Overlook Hill</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/travis-ranch">Travis Ranch</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/devonshire">Devonshire</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/fox-hollow">Fox Hollow</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/diamond-creek">Diamond Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/buffalo-creek">Buffalo Creek</a><a class="dropdown-item" href="https://forneytxplumber.com/service-areas/windmill-farms">Windmill Farms</a></div>
 </div>
 <a class="nav-item nav-link" href="https://forneytxplumber.com/testimonial">Testimonial</a>
 <a class="nav-item nav-link" href="https://forneytxplumber.com/faqs">FAQs</a>
@@ -280,8 +280,8 @@
 <div class="row g-5">
 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
 <h6 class="text-secondary text-uppercase">About Us</h6>
-<h1 class="mb-4" id="aboutus_title">Crafting Comfort: Your Trusted Plumbing Experts</h1>
-<p class="mb-4" id="aboutus_content">Welcome to Forney Plumbing Solutions, your trusted plumbing partner in Forney, TX! With years of dedicated service in the community, we pride ourselves on delivering top-notch plumbing solutions tailored to meet your unique needs. Our team of licensed and experienced plumbers is committed to excellence, ensuring every job is done right the first time. We offer a wide range of services, including repairs, installations, and maintenance for both residential and commercial properties. At Forney Plumbing Solutions, customer satisfaction is our top priority, and we work tirelessly to ensure a seamless, hassle-free experience. Trust us for reliable service and quality craftsmanship every time.</p>
+<h1 class="mb-4" id="aboutus_title">Your Trusted Plumbing Experts - Committed to Quality and Service</h1>
+<p class="mb-4" id="aboutus_content">Welcome to Forney Pro Plumbers, your trusted plumbing experts in Forney, TX. With over a decade of dedicated service, we pride ourselves on delivering exceptional plumbing solutions for both residential and commercial clients. Our team of certified and experienced plumbers is committed to ensuring your plumbing systems are efficient and reliable. We blend cutting-edge technology with traditional craftsmanship to tackle everything from routine maintenance to complex installations and emergency repairs. At Forney Pro Plumbers, customer satisfaction is our top priority, and we strive to exceed expectations with every job. Trust us to keep your plumbing in top shape. Your comfort and safety are our business.</p>
 <div class="bg-primary d-flex align-items-center p-4 mt-5">
 <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 60px; height: 60px;">
 <i class="fa fa-phone-alt fa-2x text-primary"></i>
@@ -366,34 +366,37 @@
 <div class="row">
 <div class="col-lg-10 mx-auto">
 <article class="bg-light p-4">
-<p class="text-dark" id="about_emergency_content"><p class="text-dark">Forney, TX, a charming suburb located east of Dallas, offers more than just a tight-knit community and picturesque landscapes. Its rich historical tapestry and unique culture also play a significant role in shaping the trades that serve its growing population. As Forney continues to expand, the demand for reliable plumbing services has surged, making it crucial for local plumbing experts to stay abreast of the city's development and needs.</p>
-<h3>The Historical Influences on Plumbing Demand</h3>
-<p class="text-dark">Forney's history is etched with tales of settlers who laid the foundations of this now-thriving city. With roots in the railroad and agricultural sectors, Forney has evolved over the years into a vibrant community. This transformation brings older homes and commercial buildings into the spotlight, often requiring extensive plumbing upgrades or complete overhauls to meet modern standards. As the city preserves its historical essence, maintaining and updating plumbing in these timeless structures is imperative, demanding skilled, detail-oriented plumbers.</p>
-<h3>Sub-Services Offered in Plumbing</h3>
-<p class="text-dark">In response to the diverse needs of Forney's homes and businesses, plumbers offer an array of specialized services:</p>
-<h4>1. <strong>Pipe Repair and Installation</strong></h4>
+<p class="text-dark" id="about_emergency_content"><p class="text-dark">Forney, TX, a city that began as a vital agricultural hub, continues to retain its historical charm while evolving to meet modern needs—one of which is the growing demand for professional plumbing services. As Forney expands, the need for reliable plumbing infrastructure becomes crucial, yet some might wonder how this ties into Forney's rich history and community-centric culture.</p>
+<p class="text-dark"><strong>Historical Impact on Modern Plumbing Needs</strong></p>
+<p class="text-dark">In the late 19th century, Forney emerged as a thriving market town. The expansion of the Texas and Pacific Railway boosted its growth, bringing with it the necessity for good-quality plumbing systems. This legacy of growth is vividly seen today as Forney experiences a residential and commercial boom. The historical variances in architectural styles mean a need for diverse plumbing expertise that can cater to both heritage and modern buildings.</p>
+<p class="text-dark"><strong>Comprehensive Plumbing Services in Forney</strong></p>
 <ul>
-<li>Detecting leaks in main and secondary lines</li>
-<li>Installing PEX, copper, PVC piping for optimal water flow</li>
+<li>
+<p class="text-dark"><strong>Residential Plumbing</strong><br/>
+  The suburban growth in Forney requires adept residential plumbing solutions. Whether it’s new installations or repairing old systems, homeowners depend on plumbing experts for water heater setups, sewer line repairs, and more.</p>
+</li>
+<li>
+<p class="text-dark"><strong>Commercial Plumbing</strong><br/>
+  Businesses in the rapidly developing sectors of Forney need efficient plumbing for operations. This includes the installation and maintenance of complex systems needed for restaurants, retail spaces, and office buildings.</p>
+</li>
 </ul>
-<h4>2. <strong>Water Heater Services</strong></h4>
+<p class="text-dark"><strong>Specialized Plumbing Sub-Services</strong></p>
 <ul>
-<li>Repairing and maintaining traditional tank water heaters</li>
-<li>Installing energy-efficient tankless systems</li>
+<li>
+<p class="text-dark"><strong>Drain Cleaning</strong><br/>
+  Routine drain cleaning is essential in every home and business. Effective methods, such as hydro jetting, should be employed to clear blockages without damaging pipes.</p>
+</li>
+<li>
+<p class="text-dark"><strong>Water Filtration Systems</strong><br/>
+  With a growing emphasis on health and safety, the installation of advanced water filtration systems ensures clean and safe water for all.</p>
+</li>
+<li>
+<p class="text-dark"><strong>Emergency Plumbing Services</strong><br/>
+  Addressing plumbing emergencies with rapid response is vital in preventing damage and ensuring peace of mind for residents and business owners.</p>
+</li>
 </ul>
-<h4>3. <strong>Drain Cleaning and Unclogging</strong></h4>
-<ul>
-<li>Utilizing hydro-jetting technology for efficient clearing</li>
-<li>Installing sewer cleanouts for easy maintenance</li>
-</ul>
-<h4>4. <strong>Emergency Plumbing Services</strong></h4>
-<ul>
-<li>Rapid response for burst pipes or leaking faucets</li>
-<li>24/7 availability ensuring peace of mind</li>
-</ul>
-<h3>The Cultural Connection</h3>
-<p class="text-dark">Forney's cultural vibrancy—the local events, antique shops, and burgeoning art scene—also necessitates robust plumbing services. Restaurants, galleries, and entertainment venues require systems capable of handling high volume use, further illustrating the importance of expert plumbing.</p>
-<p class="text-dark">Professional plumbers in Forney are not just craftsmen, but custodians of comfort and functionality. Whether preserving historical charm or supporting new developments, our dedicated services are available to meet every plumbing challenge head-on. For efficient and expert plumbing solutions, click to connect with our representatives today!</p></p></article>
+<p class="text-dark"><strong>Call to Action</strong></p>
+<p class="text-dark">Trust the experts to enrich your Forney living experience and maintain the integrity of its architecture and modern spaces. Click on the call button now to connect with our representatives and ensure your plumbing needs are in professional hands.</p></p></article>
 </div>
 </div>
 </div>
