Standardize phone number to (726) 262-0460

--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
     ]
 }</script></head>
 <body>
-<a class="call-now-button phoneNumber" href="tel:(469) 898-0276" id="btn_CallNow">
+<a class="call-now-button phoneNumber" href="tel:(726) 262-0460" id="btn_CallNow">
 <i>📞</i> Call Now
     </a>
 <!-- Topbar Start -->
@@ -180,7 +180,7 @@
 <div class="row align-items-center top-bar">
 <div class="col-lg-3 col-md-12 text-center text-lg-start">
 <a class="navbar-brand m-0 p-0" href="https://forneytxplumber.com/">
-<img alt="Logo" class="m-0 img w-50" id="logo_desktop" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=1740481717474"/>
+<img alt="Logo" class="m-0 img w-50" id="logo_desktop" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=(726) 262-0460474"/>
 </a>
 </div>
 <div class="col-lg-9 col-md-12 text-end">
@@ -206,7 +206,7 @@
 <div class="container-fluid nav-bar bg-light">
 <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
 <a class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none homeURL" href="https://forneytxplumber.com">
-<img alt="Logo" class="m-0" id="logo_mobile" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Mobile%20Logo%20(5).png?updatedAt=1740481666423"/>
+<img alt="Logo" class="m-0" id="logo_mobile" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Mobile%20Logo%20(5).png?updatedAt=(726) 262-0460423"/>
 </a>
 <button class="navbar-toggler" data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
 <span class="fa fa-bars"></span>
@@ -245,7 +245,7 @@
 <div class="ms-3">
 <p class="mb-1 text-white">Emergency 24/7</p>
 <h5 class="m-0 text-secondary">
-<a class="text-secondary text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="contact_top_nav_phone">(469) 898-0276</a>
+<a class="text-secondary text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="contact_top_nav_phone">(726) 262-0460</a>
 </h5>
 </div>
 </div>
@@ -273,7 +273,7 @@
 <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 <h6 class="text-secondary text-uppercase">Get In Touch</h6>
 <h1 class="mb-4" id="contact_section_title">Contact for Plumber Queries</h1>
-<p class="mb-4" id="contact_section_description">Discover the potential for savings and unparalleled service by reaching out to us today. Whether you're planning a new project or simply exploring your options, we invite you to take advantage of our complimentary quote. Call us now at (469) 898-0276, and our team of experts will provide you with a detailed and tailored estimate, completely free of charge. This is your opportunity to experience firsthand our commitment to quality and customer satisfaction. Don’t wait any longer—pick up the phone and let us help you take the first step toward your next successful endeavor.</p>
+<p class="mb-4" id="contact_section_description">Discover the potential for savings and unparalleled service by reaching out to us today. Whether you're planning a new project or simply exploring your options, we invite you to take advantage of our complimentary quote. Call us now at (726) 262-0460, and our team of experts will provide you with a detailed and tailored estimate, completely free of charge. This is your opportunity to experience firsthand our commitment to quality and customer satisfaction. Don’t wait any longer—pick up the phone and let us help you take the first step toward your next successful endeavor.</p>
 <iframe allowfullscreen="" aria-hidden="false" class="position-relative w-100" frameborder="0" id="mapFrame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125000!2d-96.45289!3d32.74361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f18!3m3!1m2!1s0x0%3A0x0!2sLocation!5e0!3m2!1sen!2s!4v1234567890" style="height: 300px; border:0;" tabindex="0"></iframe>
 </div>
 <div class="col-md-6">
@@ -283,7 +283,7 @@
 <hr/>
 <p class="mb-2 text-dark" id="page_business_name"><i class="fa fa-wrench me-3"></i>Pro Plumber Forney</p>
 <p class="mb-2 text-dark" id="page_business_address"><i class="fa fa-map-marker-alt me-3"></i>378 Farm to Market 548 #160, Forney, TX 75126, USA</p>
-<p class="mb-2"><a class="text-dark text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="page_phone"><i class="fa fa-phone-alt me-3"></i>(469) 898-0276</a></p>
+<p class="mb-2"><a class="text-dark text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="page_phone"><i class="fa fa-phone-alt me-3"></i>(726) 262-0460</a></p>
 <p class="mb-2 text-dark" id="page_email"><i class="fa fa-envelope me-3"></i>info@forneytxplumber.com</p>
 <div class="d-flex pt-2">
 <a class="socialFacebook btn btn-outline-light btn-social text-dark" href="https://www.facebook.com/ProPlumberForney"><i class="fab fa-facebook-f"></i></a>
@@ -306,7 +306,7 @@
 <h4 class="text-light mb-4">Business</h4>
 <p class="mb-2" id="footer_business_name">Pro Plumber Forney</p>
 <p class="mb-2" id="businessAddress">378 Farm to Market 548 #160, Forney, TX 75126, USA</p>
-<p class="mb-2"><a class="text-light text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="footer_phone">(469) 898-0276</a></p>
+<p class="mb-2"><a class="text-light text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="footer_phone">(726) 262-0460</a></p>
 <p class="mb-2" id="contact_footer_email">info@forneytxplumber.com</p>
 <div class="d-flex pt-2">
 <a class="socialFacebook btn btn-outline-light btn-social" href="https://www.facebook.com/ProPlumberForney"><i class="fab fa-facebook-f"></i></a>
