--- a/emergency-plumbing/24-hour-emergency-plumbing.html
+++ b/emergency-plumbing/24-hour-emergency-plumbing.html
@@ -7,7 +7,7 @@
    24-Hour Emergency Plumbing | Pro Plumber Forney
   </title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<meta content="24-Hour Emergency Plumbing in Forney, TX | (469) 898-0276" id="meta_emergency_title" name="keywords"/>
+<meta content="24-Hour Emergency Plumbing in Forney, TX | (726) 262-0460" id="meta_emergency_title" name="keywords"/>
 <meta content="Reliable plumber services in Forney, TX offering expert repairs, installations, and maintenance. Trustworthy emergency support, licensed professionals, and customer satisfaction guaranteed. Contact us for plumbing solutions that keep your home running smoothly." id="meta_description" name="description"/>
 <!-- Favicon -->
 <link href="../img/favicon.ico" rel="icon"/>
@@ -231,9 +231,9 @@
     "name": "Pro Plumber Forney",
     "description": "Reliable 24-hour emergency plumbing services in Forney, TX, providing prompt solutions for all your urgent plumbing needs.",
     "url": "https://forneytxplumber.com",
-    "logo": "https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=1740481717474",
-    "image": "https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=1740481717474",
-    "telephone": "(469) 898-0276",
+    "logo": "https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=(726) 262-0460474",
+    "image": "https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=(726) 262-0460474",
+    "telephone": "(726) 262-0460",
     "priceRange": "$$",
     "areaServed": {
         "@type": "Place",
@@ -252,7 +252,7 @@
     ],
     "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "(469) 898-0276",
+        "telephone": "(726) 262-0460",
         "contactType": "Customer Service",
         "areaServed": "US",
         "availableLanguage": [
@@ -295,7 +295,7 @@
     ]
 }</script></head>
 <body>
-<a class="call-now-button phoneNumber" href="tel:(469) 898-0276" id="btn_CallNow">
+<a class="call-now-button phoneNumber" href="tel:(726) 262-0460" id="btn_CallNow">
 <i>
     📞
    </i>
@@ -306,7 +306,7 @@
 <div class="row align-items-center top-bar">
 <div class="col-lg-3 col-md-12 text-center text-lg-start">
 <a class="navbar-brand m-0 p-0 homeURL" href="https://forneytxplumber.com">
-<img alt="Logo" class="m-0 img w-50" id="logo_desktop" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=1740481717474"/>
+<img alt="Logo" class="m-0 img w-50" id="logo_desktop" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=(726) 262-0460474"/>
 </a>
 </div>
 <div class="col-lg-9 col-md-12 text-end">
@@ -350,7 +350,7 @@
 <div class="container-fluid nav-bar bg-light">
 <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
 <a class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none" href="https://forneytxplumber.com/">
-<img alt="Logo" class="m-0" id="logo_mobile" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Mobile%20Logo%20(5).png?updatedAt=1740481666423"/>
+<img alt="Logo" class="m-0" id="logo_mobile" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Mobile%20Logo%20(5).png?updatedAt=(726) 262-0460423"/>
 </a>
 <button class="navbar-toggler" data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
 <span class="fa fa-bars">
@@ -410,8 +410,8 @@
         Emergency 24/7
        </p>
 <h5 class="m-0 text-secondary">
-<a class="text-secondary text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="top_nav_phone">
-         (469) 898-0276
+<a class="text-secondary text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="top_nav_phone">
+         (726) 262-0460
         </a>
 </h5>
 </div>
@@ -2709,8 +2709,8 @@
        378 Farm to Market 548 #160, Forney, TX 75126, USA
       </p>
 <p class="mb-2">
-<a class="text-light text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="footer_phone">
-        (469) 898-0276
+<a class="text-light text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="footer_phone">
+        (726) 262-0460
        </a>
 </p>
 <p class="mb-2" id="footer_email">
