--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
     ]
 }</script></head>
 <body>
-<a class="call-now-button phoneNumber" href="tel:(469) 898-0276" id="btn_CallNow">
+<a class="call-now-button phoneNumber" href="tel:(726) 262-0460" id="btn_CallNow">
 <i>📞</i> Call Now
         </a>
 <!-- Topbar Start -->
@@ -182,7 +182,7 @@
 <div class="row align-items-center top-bar">
 <div class="col-lg-3 col-md-12 text-center text-lg-start">
 <a class="navbar-brand m-0 p-0 homeURL" href="https://forneytxplumber.com">
-<img alt="Logo" class="m-0 img w-50" id="logo_desktop" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=1740481717474"/>
+<img alt="Logo" class="m-0 img w-50" id="logo_desktop" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Cover%20(21).png?updatedAt=(726) 262-0460474"/>
 </a>
 </div>
 <div class="col-lg-9 col-md-12 text-end">
@@ -208,7 +208,7 @@
 <div class="container-fluid nav-bar bg-light">
 <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
 <a class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none" href="https://forneytxplumber.com/">
-<img alt="Logo" class="m-0" id="logo_mobile" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Mobile%20Logo%20(5).png?updatedAt=1740481666423"/>
+<img alt="Logo" class="m-0" id="logo_mobile" src="https://ik.imagekit.io/5qfjdtfh72/Plumbing%20Lead%20Gen/Forney/Mobile%20Logo%20(5).png?updatedAt=(726) 262-0460423"/>
 </a>
 <button class="navbar-toggler" data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
 <span class="fa fa-bars"></span>
@@ -246,7 +246,7 @@
 <div class="ms-3">
 <p class="mb-1 text-white">Emergency 24/7</p>
 <h5 class="m-0 text-secondary">
-<a class="text-secondary text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="about_top_nav_phone">(469) 898-0276</a>
+<a class="text-secondary text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="about_top_nav_phone">(726) 262-0460</a>
 </h5>
 </div>
 </div>
@@ -289,7 +289,7 @@
 <div class="ms-3">
 <p class="fs-5 fw-medium mb-2 text-white">Emergency 24/7</p>
 <h3 class="m-0 text-secondary">
-<a class="text-secondary text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="about_phone">(469) 898-0276</a>
+<a class="text-secondary text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="about_phone">(726) 262-0460</a>
 </h3>
 </div>
 </div>
@@ -421,7 +421,7 @@
 <h4 class="text-light mb-4">Business</h4>
 <p class="mb-2" id="footer_business_name">Pro Plumber Forney</p>
 <p class="mb-2" id="businessAddress">378 Farm to Market 548 #160, Forney, TX 75126, USA</p>
-<p class="mb-2"><a class="text-light text-decoration-none phoneNumber" href="tel:(469) 898-0276" id="footer_phone">(469) 898-0276</a></p>
+<p class="mb-2"><a class="text-light text-decoration-none phoneNumber" href="tel:(726) 262-0460" id="footer_phone">(726) 262-0460</a></p>
 <p class="mb-2" id="about_footer_email">info@forneytxplumber.com</p>
 <div class="d-flex pt-2">
 <a class="socialFacebook btn btn-outline-light btn-social" href="https://www.facebook.com/ProPlumberForney"><i class="fab fa-facebook-f"></i></a>
